<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="http://schemas.android.com/apk/res-auto" tools:ignore="MissingTranslation">
    <string name="app_keep">Keep</string>
    <string name="app_history">History</string>
    <string name="nav_recommend">Home</string>
    <string name="nav_home">Home</string>
    <string name="nav_keep">Favorite</string>
    <string name="nav_vod">Video</string>
    <string name="nav_setting">Setting</string>
    <string name="recommend_title">Home</string>
    <string name="recommend_weekly">Weekly acclaim chart</string>
    <string name="recommend_movie_hot">Popular movies</string>
    <string name="recommend_tv_hot">Popular series</string>
    <string name="recommend_animation_hot">Popular animation</string>
    <string name="recommend_variety_hot">Popular variety</string>
    <string name="recommend_top250">Highly rated classics</string>
    <string name="recommend_score">Douban %1$.1f</string>
    <string name="recommend_error">Could not load recommendations. Check your network and retry.</string>
    <string name="recommend_channel_featured">Featured</string>
    <string name="recommend_channel_movie">Movies</string>
    <string name="recommend_channel_tv">Series</string>
    <string name="recommend_channel_animation">Animation</string>
    <string name="recommend_channel_variety">Variety</string>
    <string name="recommend_watch_now">Watch now</string>
    <string name="recommend_view_all">View all  ›</string>
    <string name="recommend_filter_genre">Genre</string>
    <string name="recommend_filter_country">Region</string>
    <string name="recommend_filter_year">Year</string>
    <string name="recommend_filter_rating">Rating</string>
    <string name="recommend_filter_sort">Sort</string>
    <string name="recommend_filter_rating_suffix">+ rating</string>
    <string name="recommend_filter_score_first">Rating first</string>
    <string name="recommend_filter_time_first">Newest first</string>
    <string name="recommend_filter_all">All genres · All regions · All years</string>
    <string name="recommend_filter_title">Browse by category</string>
    <string name="recommend_rank_subtitle">Ranked from Douban chart data</string>
    <string name="vod_home">Home</string>
    <string name="retry">Retry</string>
    <string name="error_network">No network connection, please check and retry</string>
    <string name="error_source">The source returned nothing, it may be down</string>
    <string name="app_download">Offline</string>
    <string name="download_entry">Cache</string>
    <string name="download_entry_progress">Caching <xliff:g name="percent">%s</xliff:g>%%</string>
    <string name="download_select">Select episodes</string>
    <string name="download_select_all">Select all</string>
    <string name="download_deselect_all">Clear</string>
    <string name="download_start">Cache selected (<xliff:g name="count">%s</xliff:g>)</string>
    <string name="download_added">Added <xliff:g name="count">%s</xliff:g> to the queue</string>
    <string name="download_none">Pick at least one episode</string>
    <string name="download_tasks">Caching</string>
    <string name="download_empty">Nothing cached yet</string>
    <string name="download_task_empty">No cache tasks</string>
    <string name="download_setting">Cache speed</string>
    <string name="download_mode">Download mode</string>
    <string name="download_mode_smart">Smart</string>
    <string name="download_mode_fast">Maximum</string>
    <string name="download_mode_smart_hint">Downloads at full speed while idle, then dynamically yields bandwidth when another app keeps using the network.</string>
    <string name="download_mode_fast_hint">Uses the available bandwidth and maximum connections. Other apps may become slower.</string>
    <string name="download_concurrent_task">Episodes at once</string>
    <string name="download_concurrent_task_value"><xliff:g name="count" example="3">%d</xliff:g></string>
    <string name="download_concurrent_task_hint">Controls queue concurrency only. Connection count and bandwidth are managed automatically by the selected mode.</string>
    <string name="download_count">Cached <xliff:g name="count">%s</xliff:g></string>
    <string name="download_running_count">Caching <xliff:g name="count">%s</xliff:g></string>
    <string name="download_state_pending">Queued</string>
    <string name="download_state_running">Caching</string>
    <string name="download_state_paused">Paused</string>
    <string name="download_state_error">Failed</string>
    <string name="download_state_done">Cached</string>
    <string name="download_current_episode">Currently playing</string>
    <string name="download_error_detail">Reason: <xliff:g name="message">%s</xliff:g></string>
    <string name="download_error_unknown">No error details were returned</string>
    <string name="download_action_pause">Pause cache</string>
    <string name="download_action_resume">Resume cache</string>
    <string name="download_action_retry">Retry cache</string>
    <string name="download_action_delete">Delete cache</string>
    <string name="download_seg"><xliff:g name="done">%1$s</xliff:g>/<xliff:g name="total">%2$s</xliff:g> segments</string>
    <string name="download_missing">Cached file is gone, please cache again</string>
    <string name="download_delete_selected">Delete selected (<xliff:g name="count">%d</xliff:g>)</string>
    <string name="download_delete_none">Select at least one cached episode</string>
    <string name="download_delete_done">Deleted <xliff:g name="count">%d</xliff:g> cached episode(s)</string>
    <string name="download_delete_episode_done">Cached episode deleted</string>
    <string name="download_delete_all_done">All cached content deleted</string>
    <string name="download_delete_task_done">All unfinished cache tasks deleted</string>
    <string name="dialog_delete_download">Delete all cached content?</string>
    <string name="dialog_delete_download_task">Delete all unfinished cache tasks?</string>
    <string name="dialog_delete_download_episode">Delete the cached episode “<xliff:g name="episode">%2$s</xliff:g>” from <xliff:g name="name">%1$s</xliff:g>?</string>
    <string name="dialog_delete_download_item"><xliff:g name="name">%s</xliff:g> · Select cached episodes to delete</string>
    <string name="detail_flag">Source</string>
    <string name="detail_flag_short">Lines</string>
    <string name="detail_more">More</string>
    <string name="detail_episode">Episodes</string>
    <string name="detail_quality">Quality</string>
    <string name="detail_content">Summary</string>
    <string name="detail_search">Searching <xliff:g name="name">%s</xliff:g></string>
    <string name="detail_source">Sources</string>
    <string name="detail_play_source">Playback source</string>
    <string name="detail_switch_source">Switch</string>
    <string name="detail_related">Related</string>
    <string name="search_progress">Searching %1$d/%2$d</string>
    <string name="search_actor">Cast: %s</string>
    <string name="search_source_count">%d sources</string>
    <string name="source_hint_testing">Testing source speed…</string>
    <string name="source_hint_sorted">Sorted by measured speed</string>
    <string name="source_playing">Playing</string>
    <string name="source_broken">Unavailable</string>
    <string name="source_testing">Testing…</string>
    <string name="source_timeout">Timed out</string>
    <string name="source_fail">Failed</string>
    <string name="source_skip">Not tested</string>
    <string name="source_idle">Candidate</string>
    <string name="device_select">Cast to device</string>
    <string name="device_offline">Device is offline</string>
    <string name="device_scan">Please scan QR Code to bind</string>
    <string name="device_browser">Computer / Browser</string>
    <string name="device_browser_host">Open in your computer\'s browser</string>
    <string name="device_browser_nolan">Wi-Fi required</string>
    <string name="device_browser_nolan_tip">Casting needs your phone and computer on the same local network. You are on mobile data right now, so the computer cannot reach your phone. Connect to Wi-Fi and try again.</string>
    <string name="cast_channel">Casting</string>
    <string name="cast_notify_title">Casting to <xliff:g name="name">%s</xliff:g></string>
    <string name="cast_overlay_title">Casting to <xliff:g name="name">%s</xliff:g></string>
    <string name="cast_overlay_tip">Keep this app running, the receiver is streaming from your phone</string>
    <string name="cast_play">Play</string>
    <string name="cast_pause">Pause</string>
    <string name="cast_exit">Stop casting</string>
    <string name="cast_exited">Casting stopped</string>
    <string name="cast_switching">Switching to <xliff:g name="name">%s</xliff:g></string>
    <string name="cast_browser_title">Open this address on your computer</string>
    <string name="cast_browser_tip">Make sure your computer is on the same Wi-Fi. If the video will not play, use the "Copy stream URL" button on that page and open it in PotPlayer.</string>
    <string name="cast_browser_copy">Copy address</string>
    <string name="cast_browser_copied">Address copied</string>
    <string name="control_speed">Speed</string>
    <string name="speed_lock">Speed on</string>
    <string name="speed_unlock">Restored</string>
    <string name="control_scale">Scale</string>
    <string name="screen_restore">Restore screen</string>
    <string name="control_track">Track</string>
    <string name="control_other">Other</string>
    <string name="dialog_delete_record">Delete all records?</string>
    <string name="dialog_delete_keep">All keep records will be removed.</string>
    <string name="dialog_delete_history">All history records will be removed.</string>
    <string name="timer_5">5 minutes</string>
    <string name="timer_15">15 minutes</string>
    <string name="timer_30">30 minutes</string>
    <string name="timer_60">1 hour</string>
    <string name="timer_120">2 hours</string>
    <string name="timer_180">3 hours</string>
    <string name="timer_delay">Add 15 minutes</string>
    <string name="timer_cancel">Cancel timer</string>
    <string name="home_history">History</string>
    <string name="home_more">More</string>
    <string name="shortcut">Shortcut has been added.</string>
    <string-array name="select_background">
        <item>Off</item>
        <item>On</item>
    </string-array>
    <string name="detail_rating">Douban</string>
    <string name="detail_episode_all">All <xliff:g name="count">%s</xliff:g></string>
    <string name="detail_quick">More sources</string>
    <string name="detail_expand">Expand</string>
    <string name="detail_collapse">Collapse</string>
    <string name="detail_director_tag">(Director)</string>
    <string name="device_refresh">Refresh</string>
    <string name="device_searching">Searching for devices…</string>
    <string name="device_empty">No devices found
Make sure both are on the same Wi-Fi</string>
    <string name="about_dev_title">Development</string>
    <string name="about_dev_body">This project is for learning Android development only. Based on FongMi/TV.</string>
    <string name="about_disclaimer_title">Disclaimer</string>
    <string name="about_disclaimer_body">1. For study and communication only, not for commercial use
2. All content comes from the internet; contact us to remove any infringement
3. You bear all consequences of using this app</string>
    <string name="about_github">My links</string>
    <string name="danmaku_settings">Danmaku settings</string>
    <string name="danmaku_size">Text size</string>
    <string name="danmaku_opacity">Opacity</string>
    <string name="danmaku_speed">Speed</string>
    <string name="danmaku_area">Display area</string>
    <string name="danmaku_source">Danmaku source</string>
    <string name="danmaku_source_file">Choose local danmaku file</string>
</resources>